syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ShipmentReceiptExtraProto";
option objc_class_prefix = "ShipmentReceiptExtra";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";

// Shipment Receipt Role
message ShipmentReceiptRoleData {
    option (routines.entity_type) = "ShipmentReceiptRole";
    option (routines.keys).keys = "receipt_id, party_id, role_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: receiptId, partyId, roleTypeId
    // fields
        
    string receipt_id = 1 [json_name = "receipt_id"];    
    string party_id = 2 [json_name = "party_id"];    
    string role_type_id = 3 [json_name = "role_type_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message ShipmentReceiptRoleList{
    repeated ShipmentReceiptRoleData values=1;
}


